--- a/themes/prism-a11y-dark.css
+++ b/themes/prism-a11y-dark.css
@@ -28,7 +28,7 @@ pre[class*="language-"] {
 
 /* Code blocks */
 pre[class*="language-"] {
-	padding: 1em;
+	padding: 0 1em 1em 1em;
 	margin: 0.5em 0;
 	overflow: auto;
 	border-radius: 0.3em;
@@ -41,7 +41,7 @@ pre[class*="language-"] {
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
-	padding: 0.1em;
+	padding: 0 0.1em 0.1em 0.1em;
 	border-radius: 0.3em;
 	white-space: normal;
 }
