--- a/themes/prism-a11y-dark.css
+++ b/themes/prism-a11y-dark.css
@@ -31,7 +31,7 @@ pre[class*="language-"] {
 	padding: 1em;
 	margin: 0.5em 0;
 	overflow: auto;
-	border-radius: 0;
+	border-radius: 0.3em;
 }
 
 :not(pre) > code[class*="language-"],
